# meson-nanovg

./: README.md  meson.build  meson_options.txt  nanovg.wrap
example/: meson.build
subprojects/: egl-registry.wrap  opengl-registry.wrap
